Fix spacing & alignment around hexicon container

--- a/flaskr/static/styles/projects.css
+++ b/flaskr/static/styles/projects.css
@@ -5,13 +5,16 @@
   --m: 8px;
   --f: calc(var(--s) * 1.732 + 4 * var(--m) - 1px);
 
+  --margin-offset: calc(var(--m) - (var(--s) * 0.2885));
   --hex-path: polygon(50% 0%, 100% var(--v), 100% calc(100% - var(--v)), 50% 100%, 0% calc(100% - var(--v)), 0% var(--v));
+
+  margin-top: calc(-1 * (var(--m) + (var(--panel-outline-space) * 2)));
+  overflow-y: hidden;
 }
 
 .hex-container {
   font-size: 0; /* disable white space between inline block element */
-  padding: calc(2 * var(--m));
-  margin-bottom: calc(var(--m) + var(--s) * 0.2885);
+  margin-bottom: calc(-1 * var(--margin-offset));
   width: fit-content;
 }
 
@@ -37,7 +40,7 @@
   width: var(--s);
   margin: var(--m);
   height: calc(var(--s) * 1.1547);
-  margin-bottom: calc(var(--m) - (var(--s) * 0.2885));
+  margin-bottom: var(--margin-offset);
 
   background: black;
   cursor: pointer;
